blocks: Add Compressed Wood, Dried Wood and Stone Wood.

--- a/resources/assets/jamm/lang/en_US.lang
+++ b/resources/assets/jamm/lang/en_US.lang
@@ -2,3 +2,6 @@
 
 tile.TestBlock.name=JAMM Test Block
 tile.DampWood.name=Damp Wood
+tile.DriedWood.name=Dried Wood
+tile.CompressedWood.name=Compressed Wood
+tile.StoneWood.name=Stone Wood
